maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:5: error: '(' expected but identifier found.
    if n==0 {
       ^RandomMouseMaze:18: error: illegal start of simple expression
  }
  ^